tests/pos/cos.hs
module CosPosTest where

test :: Floating a => a -> a
test x = cos x
